test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_pointer_in_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  void
  (
  *
  identifier(ptr)
  )
  [
  const int(3)
  ]
  =
  identifier(malloc)
  (
  const int(3)
  )
  ;
  return
  identifier(ptr)
  ==
  const int(0)
  ;
  }
